@@ -1,7 +1,12 @@
 2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>
 
+	* pp/samples_container.cpp:
+	* pp/samples_container.h: Check at run time we don't try to use an
+	  unitialized samples_container_t.
+
+2002-09-11  Philippe Elie  <phil.el@wanadoo.fr>
+
 	* pp/op_time.cpp: exit sooner when no samples files are available.
-	  This also work around some obscure problem with gcc >= 3.0
 
 2002-09-09  Will Cohen  <wcohen@redhat.com>
 
